--- a/.github/workflows/cicd pipeline.yml
+++ b/.github/workflows/cicd pipeline.yml
@@ -9,7 +9,7 @@ jobs:
       - name: send notification
         uses: slackapi/slack-github-action@v2.1.0
         with:
-          webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
           webhook-type: incoming-webhook
           payload: |
             {
