--- a/.github/workflows/cicd pipeline.yml
+++ b/.github/workflows/cicd pipeline.yml
@@ -1,67 +1,43 @@
-name: CI-CD pipeline
-on:
-  workflow_dispatch:
-
-jobs:
+name: CI-CD Setup
+on: workflow_dispatch
+jobs: 
   slack-notification:
     runs-on: ubuntu-latest
     steps:
-      - name: send notification
+      - name: Send notification to slack
         uses: slackapi/slack-github-action@v2.1.0
         with:
-          webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook: ${{ secrets.SLACK_WEBHOOK }}
           webhook-type: incoming-webhook
           payload: |
-            {
-              "text": "Edify Course application build started",
-              "channel": "webhook"
-            }
-
-  build:
-    needs: slack-notification
+            text: "Build Started"
+            channel: "webhook"
+  Build:
     runs-on: ubuntu-latest
-    steps:
-      - name: clone code
-        uses: actions/checkout@v2.2
-
-      - name: build docker image
-        run: docker build -t ${{ vars.DOCKER_USERNAME }}/edify-app:latest .
-
+    needs: slack-notification
+    steps: 
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
       - name: Docker Login
-        uses: docker/login-action@v2.1.0
-        with:
+        uses: docker/login-action@v3.4.0
+        with: 
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: push image to docker hub
-        run: docker push ${{ vars.DOCKER_USERNAME }}/edify-app:latest
-
+      - name: Build docker image
+        run: docker build -t ${{ vars.DOCKER_USERNAME }}/mk-edify:latest .
+      - name: Push Docker image
+        run: docker push ${{ vars.DOCKER_USERNAME }}/mk-edify:latest
   deploy:
+    runs-on: build
     needs: build
-    runs-on: self-hosted
-    steps:
-      - name: pull the docker image
-        run: docker pull ${{ vars.DOCKER_USERNAME }}/edify-app:latest
-
-      - name: Run container
-        run: docker container run -dt --name edify -p 80:80 ${{ vars.DOCKER_USERNAME }}/edify-app:latest
-
-      - name: list the container
-        run: docker container ls -a
-
-  feedback:
-    needs: deploy
-    runs-on: ubuntu-latest
-    steps:
-      - name: send notification
-        uses: slackapi/slack-github-action@v2.1.0
+    steps: 
+      - name: deploy and run container
+        run: |
+          docker pull ${{ vars.DOCKER_USERNAME }}/mk-edify:latest
+          docker run -d -p 80:80 --name mk-edify ${{ vars.DOCKER_USERNAME }}/mk-edify:latest
+      - name: Notify Slack - Deployment Completed
+        uses: slackapi/slack-github-action@v1.25.0
         with:
-          webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
-          webhook-type: incoming-webhook
-          payload: |
-            {
-              "text": "Edify Course application Deployed successfully. Go and check it in browser",
-              "channel": "webhook"
-            }
-
-        
+          payload: '{"text":"✅ Deployment Completed for mk-edify"}'
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
