--- a/.github/workflows/cicd pipeline.yml
+++ b/.github/workflows/cicd pipeline.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Send notification to slack
         uses: slackapi/slack-github-action@v2.1.0
         with:
-          webhook: ${{ secrets.SLACK_WEBHOOK }}
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL}}
           webhook-type: incoming-webhook
           payload: |
             text: "Build Started"
@@ -40,4 +40,4 @@ jobs:
         with:
           payload: '{"text":"✅ Deployment Completed for mk-edify"}'
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
